[package]
name = "objectionable"
description = "objectionable storage of unsized types inline inside allocated objects"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soqb/objectionable"

[features]
default = ["alloc"]
alloc = []
strict-provenance = []
