[package]
name = "objectionable"
description = "objectionable storage of unsized types inline inside allocated objects"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soqb/objectionable"
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
keywords = ["alloc", "box", "trait-objects", "unsized"]

[features]
default = ["alloc"]
alloc = []
strict-provenance = []
